Improve code style. (#256)
* Make use of AssertJ DSL to improve readability.

* JUnit5 test classes and methods should have default package visibility.

* Unify code style for using lambda expressions.

* Use javas type pattern matching over manual cast.

* Extract reused value to constance.

* Use getFirst/getLast for better readability.