@@ -27,17 +27,17 @@ class SimpleProjectionTest {
     }
 
     @Test
-    public void simpleProjectionToRule() {
+    void simpleProjectionToRule() {
         var view = new View();
         view.addQuery(Query.from(pkg("A")).create(t("A'")).build().project("id"));
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;;.id==<id>>] tgt: [<++a': t.A';;.id==<id>>] corr: [++a<-->a']]", query.toRules().toString());
     }
 
     @Test
-    public void linkedProjectionToRule() {
+    void linkedProjectionToRule() {
         var view = new View();
         view.addQuery(
                 Query.from(pkg("A")).create(t("A'")).build()
@@ -45,12 +45,12 @@ class SimpleProjectionTest {
         );
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;-[b]->b;>, <b: pkg.B;;.id==<id>>] tgt: [<++a': t.A';;.id==<id>>] corr: [++a<-->a']]", query.toRules().toString());
     }
 
     @Test
-    public void multiTargetProjectionToRule() {
+    void multiTargetProjectionToRule() {
         var view = new View();
         view.addQuery(
                 Query.from(pkg("A")).create(t("A'")).ref(t("B'"), "b").build()
@@ -58,33 +58,33 @@ class SimpleProjectionTest {
         );
         var queries = resolve(view);
         assertEquals(1, queries.size());
-        var query = queries.get(0);
+        var query = queries.getFirst();
         assertEquals("[src: [<++a: pkg.A;;.id==<id>>] tgt: [<++a': t.A';++-[b]->b';>, <++b': t.B';;.id==<id>>] corr: [++a<-->a', ++a<-->b']]", query.toRules().toString());
     }
 
     @Test
-    public void checkDirectContainmentInQuery() {
+    void checkDirectContainmentInQuery() {
         var projection = new SimpleProjection(Pattern.from(pkg("A")).ref(pkg("B"), "b"), t("A'"), "id", "id");
         var containment = new Containment(Pattern.from(pkg("A")).ref(pkg("B"), "b"), t("A'"), "b");
         assertTrue(projection.isContained(List.of(containment), projection.source()));
     }
 
     @Test
-    public void checkDirectPartialContainmentInQuery() {
+    void checkDirectPartialContainmentInQuery() {
         var projection = new SimpleProjection(Pattern.from(pkg("A")).ref(pkg("B"), "b"), t("A'"), "id", "id");
         var containment = new Containment(Pattern.from(pkg("A")).ref(pkg("B"), "b").ref(pkg("C"), "c"), t("A'"), "c");
         assertTrue(projection.isContained(List.of(containment), projection.source()));
     }
 
     @Test
-    public void checkNoDirectContainmentInQuery() {
+    void checkNoDirectContainmentInQuery() {
         var projection = new SimpleProjection(Pattern.from(pkg("A")).ref(pkg("B"), "b"), t("A'"), "id", "id");
         var containment = new Containment(Pattern.from(pkg("A")).ref(pkg("C"), "c"), t("A'"), "c");
         assertFalse(projection.isContained(List.of(containment), projection.source()));
     }
 
     @Test
-    public void checkNoSelectionEver() {
+    void checkNoSelectionEver() {
         var view = new View();
         var projection = new SimpleProjection(Pattern.from(pkg("A")).ref(pkg("B"), "b"), t("A'"), "id", "id");
         view.addQuery(Query.from(pkg("A")).create(t("A'")).build().project(projection).contains(pkg("C"), "c"));
